--- a/src/Modules/MasterModule/Views/ProvidersControl.xaml
+++ b/src/Modules/MasterModule/Views/ProvidersControl.xaml
@@ -72,7 +72,7 @@
             </Syncfusion:SfDataGrid.Resources>
             <Syncfusion:SfDataGrid.Columns>
                 <Syncfusion:GridTextColumn HeaderText="{Binding lcodigo, Source={StaticResource ResourceLanguage}}" 
-                                           MappingName="Code" 
+                                           MappingName="Codigo" 
                                            TextAlignment="Left"
                                            AllowFiltering="True"                                
                                            FilterPopupStyle="{StaticResource GenericCodeStyle}"
