--- a/src/Modules/MasterModule/Views/Vehicles/CommunicationOrder.xaml
+++ b/src/Modules/MasterModule/Views/Vehicles/CommunicationOrder.xaml
@@ -22,7 +22,7 @@
                 AssistTableName="VIASPEDIPRO"
                 ButtonImage="{x:Static uiObjects:UiConstants.ImagePath}"
                 LabelText="Via"
-                AssistProperties="Numero, Nombre"
+                AssistProperties="Codigo, Nombre"
                 IsReadOnlySecond="True"
                 ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"   
                 MagnifierCommand="{Binding AssistCommand, Mode=OneWay}"
@@ -54,7 +54,7 @@
                 AssistTableName="FORMAS_PEDENT"
                 ButtonImage="{x:Static uiObjects:UiConstants.ImagePath}"
                 LabelText="{Binding lformaentrega, Source={StaticResource ResourceLanguage}}"
-                AssistProperties="Numero, Nombre"
+                AssistProperties="Codigo, Nombre"
                 IsReadOnlySecond="True"
                 ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"                                                 
                 LabelTextWidth="100"
@@ -71,7 +71,7 @@
                 AssistTableName="TL_CONDICION_PRECIO"
                 ButtonImage="{x:Static uiObjects:UiConstants.ImagePath}"
                 LabelText="{Binding lcondicionventa, Source={StaticResource ResourceLanguage}}"
-                AssistProperties="Code, Nombre"
+                AssistProperties="Codigo, Nombre"
                 IsReadOnlySecond="True"
                 ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"                                                 
                 LabelTextWidth="100"
