--- a/src/Modules/HelperModule/Views/VehicleMantienanceCode.xaml
+++ b/src/Modules/HelperModule/Views/VehicleMantienanceCode.xaml
@@ -4,15 +4,71 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:HelperModule.Views"
+             xmlns:Syncfusion="http://schemas.syncfusion.com/wpf"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:karveControls="clr-namespace:KarveControls;assembly=KarveControls"
+             xmlns:behaviour="clr-namespace:HelperModule.Views.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition ></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-       
+        <GroupBox Header="{Binding lrbtnBancosClientes, Source={StaticResource ResourceLanguage}}">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition></RowDefinition>
+
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                    <TextBlock Text="Codigo" Height="25"  Width="61" Margin="0,28.45,0,0" VerticalAlignment="Top"></TextBlock>
+                    <TextBox x:Name="CodeTextBox" MinWidth="1" Height="25" Width="189" IsReadOnly="True" Background="Cyan" 
+                             Text="{Binding HelperDto.Code, Mode=TwoWay}" Margin="0,18.5"
+                             karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"></TextBox>
+
+
+                    <TextBlock Text="Nombre" Width="64" Height="25" Margin="5,19,0,19" 
+                    ></TextBlock>
+                    <TextBox x:Name="NameTextBox"  Width="230" Height="25" 
+                             karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
+                             Text="{Binding HelperDto.Name, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
+                    <TextBlock Text="Swift" Width="64" Height="25" Margin="5,19,0,19" 
+                    ></TextBlock>
+                    <TextBox x:Name="Swift"  Width="230" Height="25" 
+                             karveControls:ControlState.ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay}"
+                             Text="{Binding HelperDto.Swift, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" Margin="0,18.5"/>
+                    <TextBlock Text="{Binding State,Mode=OneWay}" HorizontalAlignment="Right"></TextBlock>
+                </StackPanel>
+                <Syncfusion:SfDataGrid Grid.Row="1" 
+                                       x:Name="Summary"                       
+                                       ColumnSizer="Star"
+                                       AllowDraggingColumns="True"
+                                       AllowEditing="False"
+                                       AllowFiltering="True"
+                                       AllowResizingColumns="True"
+                                       AllowSorting="True"
+                                       AllowGrouping="True"
+                                       ShowGroupDropArea="True"
+                                       NavigationMode="Row"
+                                       AutoGenerateColumns="True"
+                                       karveControls:KarveGridExt.GridIdentifier="{Binding GridIdentier}"
+                                       karveControls:KarveGridExt.GridInitCommand="{Binding GridRegisterCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParamChangedCommand="{Binding GridResizeCommand, Mode=OneWay}"
+                                       karveControls:KarveGridExt.GridParameters="{Binding GridParam, Mode=OneWay}"
+                                       ItemsSource="{Binding HelperView, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                >
+                    <Syncfusion:SfDataGrid.Resources>
+                        <ResourceDictionary>
+                            <ResourceDictionary.MergedDictionaries>
+                                <ResourceDictionary Source="/Syncfusion.SfGrid.WPF;component/Styles/Styles.xaml" />
+                            </ResourceDictionary.MergedDictionaries>
+                        </ResourceDictionary>
+                    </Syncfusion:SfDataGrid.Resources>
+                    <i:Interaction.Behaviors>
+                        <behaviour:GridChangeSelectionBehaviour ChangedSelectionCommand="{Binding SelectionChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                        <karveControls:GridColumnFilterBehaviour AssistProperties="Code,Name,Swift"></karveControls:GridColumnFilterBehaviour>
+                    </i:Interaction.Behaviors>
+
+                </Syncfusion:SfDataGrid>
+            </Grid>
+        </GroupBox>
     </Grid>
 </UserControl>
