--- a/src/Modules/MasterModule/Views/Vehicles/GeneralAssurance.xaml
+++ b/src/Modules/MasterModule/Views/Vehicles/GeneralAssurance.xaml
@@ -22,7 +22,7 @@
             AssistDataFieldFirst="NUM_PROVEE"
             AssistDataFieldSecond="NOMBRE"
             DataFieldFirst="ciasegu"
-            AssistProperties="Code, Nombre, Direccion, Poblacion, Pais, Mail"
+            AssistProperties="Codigo,Nombre,Direccion,Poblacion,Pais,Telefono,Email"
             MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             ItemChangedCommand="{Binding ItemChangedCommand, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"                          
             AssistTableName="ASSURANCE"
@@ -36,7 +36,7 @@
             AssistDataFieldFirst="NUM_AG"
             AssistDataFieldSecond="NOMBRE"
             DataFieldFirst="agente"
-            AssistProperties="Code, Nombre, Direccion, Poblacion, Pais, Mail"
+            AssistProperties="Codigo,Nombre,Direccion,Poblacion,Pais,Telefono,Email"
             AssistQuery="{Binding AgentQuery, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
             IsReadOnlySecond="True"
             TextContentFirstWidth="50"
