--- a/src/Modules/MasterModule/Views/ProvidersControl.xaml
+++ b/src/Modules/MasterModule/Views/ProvidersControl.xaml
@@ -34,7 +34,7 @@
             </ResourceDictionary>
         </Grid.Resources>
         <Syncfusion:SfDataGrid x:Name="SupplierSummary"
-                               ColumnSizer="AutoWithLastColumnFill"
+                               ColumnSizer="Star"
                                AllowDraggingColumns="True"
                                AllowEditing="False"
                                AllowFiltering="True"
